--- a/FinalProject/DetailScreen.storyboard
+++ b/FinalProject/DetailScreen.storyboard
@@ -1,25 +1,152 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17150" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="32700.99.1234" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17122"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22684"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Detail Screen-->
         <scene sceneID="s0d-6b-0kx">
             <objects>
-                <viewController id="Y6W-OH-hqX" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="dscreen" id="Y6W-OH-hqX" customClass="DetailScreen" customModule="FinalProject" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="5EZ-qb-Rvc">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" axis="vertical" alignment="top" spacing="24" translatesAutoresizingMaskIntoConstraints="NO" id="dZL-BE-hh3">
+                                <rect key="frame" x="205" y="186.66666666666663" width="168" height="279"/>
+                                <subviews>
+                                    <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="N7Y-5l-vph">
+                                        <rect key="frame" x="0.0" y="0.0" width="150" height="34"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="150" id="tyO-KP-tJ5"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="N5e-Qx-ocQ">
+                                        <rect key="frame" x="0.0" y="58" width="150" height="34"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="150" id="i7E-VU-jTB"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="DsG-zf-0KP">
+                                        <rect key="frame" x="0.0" y="116.00000000000003" width="56" height="32"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="56" id="dL7-FK-5xc"/>
+                                        </constraints>
+                                        <segments>
+                                            <segment title=""/>
+                                            <segment title=""/>
+                                        </segments>
+                                    </segmentedControl>
+                                    <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="r5I-Rn-wfP">
+                                        <rect key="frame" x="0.0" y="171.00000000000003" width="150" height="34"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="150" id="FoN-aF-kEP"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="date" translatesAutoresizingMaskIntoConstraints="NO" id="rh4-K3-WlX">
+                                        <rect key="frame" x="0.0" y="229" width="168" height="50"/>
+                                    </datePicker>
+                                </subviews>
+                            </stackView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cRF-sQ-srx">
+                                <rect key="frame" x="305" y="510.66666666666669" width="61" height="34.333333333333314"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="filled" title="Save"/>
+                                <connections>
+                                    <action selector="save:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="H7I-tj-BH0"/>
+                                    <action selector="save:" destination="ZcV-eA-IVj" eventType="touchUpInside" id="p64-EX-eUE"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2ag-M0-UDb">
+                                <rect key="frame" x="205" y="510" width="75" height="35"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="75" id="5n9-JI-9Gn"/>
+                                    <constraint firstAttribute="height" constant="35" id="WjR-5B-jwj"/>
+                                </constraints>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="tinted" title="Back"/>
+                                <connections>
+                                    <action selector="back:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="XsA-bp-YeK"/>
+                                </connections>
+                            </button>
+                            <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" axis="vertical" alignment="top" spacing="40" translatesAutoresizingMaskIntoConstraints="NO" id="wjl-pI-raV">
+                                <rect key="frame" x="38" y="197" width="128.66666666666663" height="261.66666666666674"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Task Type:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="u17-mj-0AK">
+                                        <rect key="frame" x="0.0" y="0.0" width="81.333333333333329" height="20.333333333333332"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Task Name:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aZW-vF-w3l">
+                                        <rect key="frame" x="0.0" y="60.333333333333321" width="88.666666666666671" height="20.333333333333336"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Task Status:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hpS-hL-l0B">
+                                        <rect key="frame" x="0.0" y="120.66666666666667" width="92.666666666666671" height="20.333333333333329"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Assignee:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5w4-Pc-8la">
+                                        <rect key="frame" x="0.0" y="181" width="74" height="20.333333333333343"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Date Completed:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tpU-57-a67">
+                                        <rect key="frame" x="0.0" y="241.33333333333331" width="128.66666666666666" height="20.333333333333314"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                            </stackView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="cRF-sQ-srx" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="305" id="95O-fb-KSh"/>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="bottom" secondItem="wjl-pI-raV" secondAttribute="bottom" constant="354.32999999999998" id="Fwr-gL-Gvq"/>
+                            <constraint firstItem="wjl-pI-raV" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="64" id="GBD-ld-KYA"/>
+                            <constraint firstItem="cRF-sQ-srx" firstAttribute="top" secondItem="dZL-BE-hh3" secondAttribute="bottom" constant="45" id="Pei-qD-ROG"/>
+                            <constraint firstItem="2ag-M0-UDb" firstAttribute="top" secondItem="dZL-BE-hh3" secondAttribute="bottom" constant="44.329999999999998" id="X7U-Nm-LjE"/>
+                            <constraint firstItem="cRF-sQ-srx" firstAttribute="leading" secondItem="2ag-M0-UDb" secondAttribute="trailing" constant="25" id="XM2-TW-Y7c"/>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="dZL-BE-hh3" secondAttribute="trailing" constant="20" id="aNH-VC-cKe"/>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="bottom" secondItem="2ag-M0-UDb" secondAttribute="bottom" constant="273" id="cA0-ah-2oB"/>
+                            <constraint firstItem="2ag-M0-UDb" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="205" id="dPB-y2-3Zu"/>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="bottom" secondItem="cRF-sQ-srx" secondAttribute="bottom" constant="273" id="fAK-I9-tZE"/>
+                            <constraint firstItem="wjl-pI-raV" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" constant="143" id="r6D-mL-iCx"/>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="cRF-sQ-srx" secondAttribute="trailing" constant="27" id="u98-7J-eRp"/>
+                            <constraint firstItem="dZL-BE-hh3" firstAttribute="leading" secondItem="wjl-pI-raV" secondAttribute="trailing" constant="12.33" id="vtb-qf-SPa"/>
+                        </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="MnY-X0-3TM"/>
+                    <connections>
+                        <outlet property="assigneeField" destination="r5I-Rn-wfP" id="Y3x-IG-VHQ"/>
+                        <outlet property="datePicker" destination="rh4-K3-WlX" id="wKW-qe-25c"/>
+                        <outlet property="saveButton" destination="cRF-sQ-srx" id="alr-nn-e5p"/>
+                        <outlet property="taskNameField" destination="N5e-Qx-ocQ" id="bTO-5R-5tO"/>
+                        <outlet property="taskStatusPicker" destination="DsG-zf-0KP" id="1CX-Md-LIa"/>
+                        <outlet property="taskTypeField" destination="N7Y-5l-vph" id="4YZ-Fb-5Xc"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ief-a0-LHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <exit id="ZcV-eA-IVj" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
+            <point key="canvasLocation" x="1061.8320610687022" y="3.5211267605633805"/>
         </scene>
     </scenes>
     <resources>
